# gridmind

./: .env.example  .gitignore  Dockerfile  HF_BLOG_POST.md  LICENSE  README.md  baseline_scores.json  generate_realistic_training_log.py  generate_training_log.py  go.mod  inference.py  main.go  openenv.yaml  pyproject.toml  test_coordinator.py  test_suite_results.json  verify_readiness.py
dashboard/: server.py
dashboard/static/: dashboard.js  index.html
data/: generate_prices.py  price_curves.json
env/: environment.go  faults.go  models.go  rewards.go  tasks.go
gridmind_rl.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
python/: __init__.py  inference.py  models.py  requirements.txt  validate.py
results/: baseline_scores_heuristic.json  training_log.csv
scratch/: enforce_gpu.py  fix_grpo_config.py  fix_health_check.py  fix_imports.py  fix_imports_2.py  fix_step4.py  fix_tokenizer_param.py  fix_trl_version.py  fix_url.py
scripts/: compare_baseline.py  demo_run.py  demo_run.sh  diagnose_reward.py  full_demo.py  gridmind_grpo_colab.ipynb  multi_building_demo.py  plot_results.py  run_baseline.sh  train_unsloth.py  validate-submission.sh
server/: app.py
tests/: environment_test.go  test_graders.py
